old/deploy/app/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
    env: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
      env: production
  template:
    metadata:
      labels:
        app: app
        env: production
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2-alpine
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command: ['nginx', '-s', 'quit']
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: 80
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /_status
              port: 80
          resources:
            requests:
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 32Mi
          ports:
            - containerPort: 80
              protocol:      TCP
              name:          nginx
          volumeMounts:
            - mountPath: /nginx/root
              name:      app-public
              readOnly:  true
            - mountPath: /nginx/sockets
              name:      app-sockets
              readOnly:  true
            - mountPath: /etc/nginx/conf.d
              name:      nginx-conf
        - name: puma
          image: 172.16.0.30:5000/kube-sample:1.0.0
          imagePullPolicy: Always
          command: ['bundle', 'exec', 'puma', '-C', 'config/puma/puma.rb']
          lifecycle:
            postStart:
              exec:
                command: ['cp', '-r', 'public/.', '/nginx/root']
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: 3000
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /
              port: 3000
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 3000
              protocol:      TCP
              name:          puma
          volumeMounts:
            - mountPath: /app/config/puma
              name:      app-puma
            - mountPath: /nginx/root
              name:      app-public
            - mountPath: /app/tmp/sockets
              name:      app-sockets
      volumes:
        - name: nginx-conf
          configMap:
            name: app-configmap-nginx
        - name: app-puma
          configMap:
            name: app-configmap-puma
        - name: app-public
          emptyDir: {}
        - name: app-sockets
          emptyDir: {}
