old/deploy/app/app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: sample.example.com
      http:
        paths:
          - backend:
              serviceName: app-service
              servicePort: 80
  # backend:
  #   serviceName: app-service
  #   servicePort: 80
  tls:
    - hosts:
        - sample.example.com
      secretName: app-tls-secret
